update style button

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,4 +1,5 @@
 @import './components/variables.scss';
+@import './components/button.scss';
 @import './pages/menu-sidebar.scss';
 @import './pages/signin.scss';
 
